--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
 <!-- <script src="js/jquery.min.js"></script> -->
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<!-- <script src="js/bootstrap.min.js"></script> -->
+<!-- z<script src="js/bootstrap.min.js"></script> -->
 <!-- <script src="js/bootstrap-toggle.min.js"></script> -->
 <!--
 <script type="text/javascript">
@@ -480,17 +480,25 @@
 
 
 <!-- <link href="css/bootstrap-toggle.min.css" rel="stylesheet"> -->
+
+
+<!-- FUNCTIONAL LOCAL SETUP ---->
 <link rel="stylesheet" type="text/css" href="libs/nouislider.min.css">
 <script src="libs/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
 
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script> -->
+<script src="js/jquery.min.js"></script>
 
 <script src="libs/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 <link href="css/bootstrap.min.css" rel="stylesheet">
 
-<link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
-<script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
+<!-- <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
+<script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script> -->
+
+<script src="js/bootstrap.min.js"></script>
+<script src="js/bootstrap-toggle.min.js"></script>
+<link href="css/bootstrap-toggle.min.css" rel="stylesheet">
 
 <script>
     /*jshint esnext: true */
